# Music_Recommendation_System_V2

demo/: app.py  config.py  pyproject.toml  tasks.py
demo/models/: user.py
frontend/vue-app/: package-lock.json  package.json
frontend/vue-app/src/: App.vue  main.js
frontend/vue-app/src/pages/: AddToPlaylist.vue  AdminDashboard.vue  AdminLogin.vue  CreatorAccount.vue  CreatorEditSongs.vue  CreatorProfile.vue  CreatorRegistration.vue  CreatorViewSongs.vue  Login.vue  SearchSongs.vue  Shark.vue  UserHomePage.vue  UserProfile.vue  UserRegister.vue  UserViewSongs.vue
frontend/vue-app/src/router/: index.js
